src/test/ui/error-codes/E0116.rs
impl Vec<u8> {}
//~^ ERROR E0116

fn main() {
}
